force-app/main/default/objects/FieldRequirement__mdt/FieldRequirement__mdt.object-meta.xml
<CustomObject>
    <description>Custom requirement(s) for field values</description>
    <label>Field Requirement</label>
    <pluralLabel>Field Requirements</pluralLabel>
</CustomObject>