force-app/main/default/objects/FieldRequirement__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Field name for the field requirement</description>
    <inlineHelpText>Field name for the field requirement</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>