force-app/main/default/objects/FieldRequirement__mdt/fields/RequiredValue__c.field-meta.xml
<CustomField>
    <fullName>RequiredValue__c</fullName>
    <description>Required value for the field requirement</description>
    <inlineHelpText>Required value for the field requirement</inlineHelpText>
    <label>Required Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>