force-app/main/default/objects/FieldRequirement__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>SObject name (lower-case) for the field requirement</description>
    <inlineHelpText>SObject name (lower-case) for the field requirement</inlineHelpText>
    <label>SObject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>